# table-detect

./: README.md  pyproject.toml  requirements.txt
table_detect/: __main__.py  _table.py  base.py  camelot.py  image2table.py  metrics.py  table_cell_ocr.py  test.py  test_camelot.py  test_table_ocr.py
utils/: __init__.py  log.py  scheduler_task.py  util.py  utils-template.py
