[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "table-detect"
dynamic = ["version"]
authors = [{ name = "yoga", email = "ychsu@iii.org.tw" }]
description = "Table detect"
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "tomli==2.0.1; python_version < '3.11'",
    "img2table[easyocr]==1.2.11",
    "pdf2image==1.17.0",
    "camelot-py[base]",
    "matplotlib==3.9.2",
    "requests==2.32.3",
]
    [project.optional-dependencies]


[tool]
    [tool.ruff]
    target-version = "py310"
    line-length    = 130
    ignore         = ["E402", "F841", "F401", "E203"]

    [tool.isort]
    profile = "ruff"

    [tool.hatch.version]
    path = "table_detect/__init__.py"

    [tool.coverage.run]
    omit = ["*template*", "test/*", "utils/*", "*__init__.py*"]

    [tool.coverage.report]
    precision = 2
    fail_under = 80.0
    show_missing = true
    skip_covered = true
    exclude_lines = [
        "# pragma: no cover",
        "@abc.abstractclassmethod",
        "@abc.abstractmethod",
        "pass",
        "if __name__ == *",
        "def __repr__",
        "if TYPE_CHECKING",
    ]
